<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <!--Layout menu-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/navi_button"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_profile"
            android:paddingLeft="5dp"
            android:text="@string/profile"
            android:textSize="9sp"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/navi_button"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_ready"
            android:paddingLeft="5dp"
            android:text="@string/ready"
            android:textSize="9sp"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/navi_button"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_history"
            android:paddingLeft="5dp"
            android:text="@string/history"
            android:textSize="9sp"

            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/navi_button"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_wish"

            android:paddingLeft="5dp"
            android:text="@string/wishlist"
            android:textSize="9sp"

            />
    </LinearLayout>
    <!--Layout menu end-->
    <!--Layout headtext-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <!--Layout logo-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
        </LinearLayout>
        <!--Layout logo end-->
        <!--Layout logo-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </LinearLayout>
        <!--Layout logo end-->
    </LinearLayout>
    <!--Layout headtext end-->

</LinearLayout>
