<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/navi_button"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_profile_sm"
            android:paddingLeft="5dp"
            android:text="@string/profile"
            android:textSize="12sp"
            android:gravity="center_vertical"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/navi_button"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_ready_sm"
            android:paddingLeft="5dp"
            android:text="@string/ready"
            android:textSize="12sp"
            android:gravity="center_vertical"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/navi_button"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_history_sm"
            android:paddingLeft="5dp"
            android:text="@string/history"
            android:textSize="12sp"
            android:gravity="center_vertical"

            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/navi_button"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_wish_sm"
            android:gravity="center_vertical"
            android:paddingLeft="5dp"
            android:text="@string/wishlist"
            android:textSize="12sp"

            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="รายการสินค้าที่ซื้อไป"
            android:padding="10dp"
            android:textSize="20sp"

            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">


        </LinearLayout>

    </LinearLayout>



</LinearLayout>