<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/navi_button"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_profile_sm"
            android:paddingLeft="5dp"
            android:text="@string/profile"
            android:textSize="12sp"
            android:gravity="center_vertical"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/navi_button"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_ready_sm"
            android:paddingLeft="5dp"
            android:text="@string/ready"
            android:textSize="12sp"
            android:gravity="center_vertical"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/navi_button"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_history_sm"
            android:paddingLeft="5dp"
            android:text="@string/history"
            android:textSize="12sp"
            android:gravity="center_vertical"

            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/navi_button"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_wish_sm"
            android:paddingLeft="5dp"
            android:text="@string/wishlist"
            android:textSize="12sp"
            android:gravity="center_vertical"

            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="รายการสินค้าทั้งหมด"
            android:padding="10dp"
            android:textSize="20sp"
            android:background="@drawable/textview_regis"
            />
    </LinearLayout>
    <!--Layout box hori-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        >
        <!--Layout product 01-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_margin="10dp"

            >
            <ImageView
                android:layout_width="270px"
                android:layout_height="218px"
                android:background="@drawable/ic_imgbp"
                android:padding="10dp"

                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:background="@drawable/button_add"
                android:layout_marginTop="10dp"
                android:text="@string/add_list"
                android:textSize="10sp"
                android:textAlignment="center"
                android:gravity="center_vertical"


                />


        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">
        <!--Layout product 01-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_margin="10dp"

            >
            <ImageView
                android:layout_width="270px"
                android:layout_height="218px"
                android:background="@drawable/ic_imgnot"
                android:padding="10dp"

                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:background="@drawable/button_add"
                android:layout_marginTop="10dp"
                android:text="@string/add_list"
                android:textSize="10sp"
                android:textAlignment="center"
                android:gravity="center_vertical"




                />


        </LinearLayout>
        <!--Layout product 01 end-->

    </LinearLayout>
    </LinearLayout>
    <!--Layout box hori end-->
    <!--Layout box hori-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            >
            <!--Layout product 01-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_margin="10dp"

                >
                <ImageView
                    android:layout_width="270px"
                    android:layout_height="218px"
                    android:background="@drawable/ic_imgfdf"
                    android:padding="10dp"

                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:background="@drawable/button_add"
                    android:layout_marginTop="10dp"
                    android:text="@string/add_list"
                    android:textSize="10sp"
                    android:textAlignment="center"
                    android:gravity="center_vertical"



                    />


            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">
            <!--Layout product 01-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_margin="10dp"

                >
                <ImageView
                    android:layout_width="270px"
                    android:layout_height="218px"
                    android:background="@drawable/ic_imgch"
                    android:padding="10dp"

                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:background="@drawable/button_add"
                    android:layout_marginTop="10dp"
                    android:text="@string/add_list"
                    android:textSize="10sp"
                    android:textAlignment="center"
                    android:gravity="center_vertical"



                    />


            </LinearLayout>
            <!--Layout product 01 end-->

        </LinearLayout>
    </LinearLayout>
    <!--Layout box hori end-->
    <!--Layout box hori-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            >
            <!--Layout product 01-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_margin="10dp"

                >
                <ImageView
                    android:layout_width="270px"
                    android:layout_height="218px"
                    android:background="@drawable/ic_imgs"
                    android:padding="10dp"

                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:background="@drawable/button_add"
                    android:layout_marginTop="10dp"
                    android:text="@string/add_list"
                    android:textSize="10sp"
                    android:textAlignment="center"
                    android:gravity="center_vertical"


                    />


            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">
            <!--Layout product 01-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_margin="10dp"

                >
                <ImageView
                    android:layout_width="270px"
                    android:layout_height="218px"
                    android:background="@drawable/ic_imgff"
                    android:padding="10dp"

                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:background="@drawable/button_add"
                    android:layout_marginTop="10dp"
                    android:text="@string/add_list"
                    android:textSize="10sp"
                    android:textAlignment="center"
                    android:gravity="center_vertical"


                    />


            </LinearLayout>
            <!--Layout product 01 end-->

        </LinearLayout>
    </LinearLayout>
    <!--Layout box hori end-->
    <!--Layout box hori-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            >
            <!--Layout product 01-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_margin="10dp"

                >
                <ImageView
                    android:layout_width="270px"
                    android:layout_height="218px"
                    android:background="@drawable/ic_imgs"
                    android:padding="10dp"

                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:background="@drawable/button_add"
                    android:layout_marginTop="10dp"
                    android:text="@string/add_list"
                    android:textSize="10sp"
                    android:textAlignment="center"
                    android:gravity="center_vertical"


                    />


            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">
            <!--Layout product 01-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_margin="10dp"

                >
                <ImageView
                    android:layout_width="270px"
                    android:layout_height="218px"
                    android:background="@drawable/ic_imgff"
                    android:padding="10dp"

                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:background="@drawable/button_add"
                    android:layout_marginTop="10dp"
                    android:text="@string/add_list"
                    android:textSize="10sp"
                    android:textAlignment="center"
                    android:gravity="center_vertical"


                    />


            </LinearLayout>
            <!--Layout product 01 end-->

        </LinearLayout>
    </LinearLayout>
    <!--Layout box hori end-->

</LinearLayout>
